document that APOB and AFP are associated in mice

--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1060,13 +1060,15 @@ but are negatively correlated with pre-eclampsia~%
 We also compared differences in the \mouse lineage in comparison to
 all other lineages using a type-III ANOVA as in the \human analysis,
 and found few genes which are highly differentially expressed and are
-also associated with adverse pregnancy outcomes. Comparisons between
-rodentia (\mouse, \galili, and \carmeli) and all other species using
-the mean of each species expression did not indicate any significant
-differences (Supplemental \cref{tab:rodentia_lineage_specific}) nor
-did the equivalent comparisons between laurasiatheria and all other
-species (Supplemental \cref{tab:laurasiatheria_lineage_specific}) and
-laurasiatheria and euarchontoglires (Supplemental
+also associated with adverse pregnancy outcomes, including \ac{APOB}
+and \ac{AFP} (Supplemental \cref{tab:mouse_lineage_specific_all}).
+Comparisons between rodentia (\mouse, \galili, and \carmeli) and all
+other species using the mean of each species expression did not
+indicate any significant differences (Supplemental
+\cref{tab:rodentia_lineage_specific}) nor did the equivalent
+comparisons between laurasiatheria and all other species (Supplemental
+\cref{tab:laurasiatheria_lineage_specific}) and laurasiatheria and
+euarchontoglires (Supplemental
 \cref{tab:laurasiatheria_euarchontoglires_lineage_specific}).
 Additional placenta samples of each species and the collection of the
 placentas of additional laurasiatherians may resolve the lack of
