--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1350,15 +1350,19 @@ vs %
 \Sexpr{core.placenta.transcriptome.long[housekeeping==FALSE,length(unique(human_name))]/
   core.placenta.transcriptome.long[,length(unique(human_name))]}%
 %
-). An alternative approach to defining
-housekeeping genes is to use the tissue specificity
+). An alternative approach to identify housekeeping genes is to use
+the tissue specificity
 index~\cite{Yanai.ea2005:Genome-widemidrangetranscriptionprofiles}.
-Supplemental \cref{tab:tissue_specificity_index_of_plaenta_core_genes}
-lists the tissue specificity index for all housekeeping and
-non-housekeeping genes; housekeeping genes expressed in all placentas
-have a lesser median tissue specificity index than non-housekeeping
-genes (Supplemental
-\cref{fig:tissue_specificity_index_with_housekeeping}).
+Supplemental
+\cref{tab:tissue_specificity_index_of_placenta_core_genes} lists the
+tissue specificity index for all housekeeping and non-housekeeping
+genes; housekeeping genes expressed in all placentas have a lesser
+median tissue specificity index than non-housekeeping genes
+(Supplemental \cref{fig:tissue_specificity_index_with_housekeeping}).
+We also note that housekeeping genes have been defined in \human, and
+may not be housekeeping genes in other species; generating tissue
+expression atlases and examining the evolution of expression in
+non-model organisms is a promising area of future research.
 
 Supplemental \cref{tab:core_placenta_go_terms} lists the significant
 enrichment of \ac{GO} terms in the core placenta transcriptome;
