--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -47,8 +47,8 @@
 \DeclareAcronym{ITGB1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1}{\textit{ITGB1}},long={integrin subunit β 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1}{\textit{ITGB1}} (integrin subunit β 1)}}
 \DeclareAcronym{ITGB1BP1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1BP1}{\textit{ITGB1BP1}},long={integrin subunit β 1 binding protein 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1BP1}{\textit{ITGB1BP1}} (integrin subunit β 1 binding protein 1)}}
 \DeclareAcronym{EREG}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=EREG}{\textit{EREG}},long={epiregulin},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=EREG}{\textit{EREG}} (epiregulin)}}
-\DeclareAcronym{UNC93A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}},long={unc-93 homolog A (C. elegans)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}} (unc-93 homolog A (C. elegans))}}
-\DeclareAcronym{UNC93B1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}},long={unc-93 homolog B1 (C. elegans)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}} (unc-93 homolog B1 (C. elegans))}}
+\DeclareAcronym{UNC93A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}},long={unc-93 homolog A (\textit{C. elegans})},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}} (unc-93 homolog A (\textit{C. elegans}))}}
+\DeclareAcronym{UNC93B1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}},long={unc-93 homolog B1 (\textit{C. elegans})},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}} (unc-93 homolog B1 (\textit{C. elegans}))}}
 \DeclareAcronym{WNT5A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=WNT5A}{\textit{WNT5A}},long={Wnt family member 5A},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=WNT5A}{\textit{WNT5A}} (Wnt family member 5A)}}
 \DeclareAcronym{IL1RL1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=IL1RL1}{\textit{IL1RL1}},long={interleukin 1 receptor like 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=IL1RL1}{\textit{IL1RL1}} (interleukin 1 receptor like 1)}}
 \DeclareAcronym{PLAC1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PLAC1}{\textit{PLAC1}},long={placenta specific 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PLAC1}{\textit{PLAC1}} (placenta specific 1)}}
