add apob and afp acronyms; remove psg and pag acronyms

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -9,8 +9,8 @@
 %\DeclareAcronym{OUCH}{short=OUCH,long=\ac*{OU} Comparative Hypotheses}
 \DeclareAcronym{TSI}{short=TSI,long=Tissue Specificity Index}
 \DeclareAcronym{GH}{short=GH,long=Growth Hormone}
-\DeclareAcronym{PSG}{short=PSG,long={Pregnancy-Specific Glycoprotein}}
-\DeclareAcronym{PAG}{short=PAG,long={Pregnancy-Associated Glycoprotein}}
+%\DeclareAcronym{PSG}{short=PSG,long=Pregnancy-Specific Glycoprotein}
+%\DeclareAcronym{PAG}{short=PAG,long=Pregnancy-Associated Glycoprotein}
 \DeclareAcronym{GO}{short=GO,long={Gene Ontology}}
 \DeclareAcronym{FDR}{short=FDR,long={False Discovery Rate}}
 \DeclareAcronym{gsea}{short=GSEA,long={gene set enrichment analysis}}
@@ -55,6 +55,8 @@
 \DeclareAcronym{Afp}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Afp}{\textit{Afp}},long={α-fetoprotein},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Afp}{\textit{Afp}} (α-fetoprotein)}}
 \DeclareAcronym{Gjb2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Gjb2}{\textit{Gjb2}},long={gap junction protein β 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Gjb2}{\textit{Gjb2}} (gap junction protein β 2)}}
 \DeclareAcronym{CD9}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CD9}{\textit{CD9}},long={CD9 molecule},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CD9}{\textit{CD9}} (CD9 molecule)}}
+\DeclareAcronym{AFP}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=AFP}{\textit{AFP}},long={alpha fetoprotein},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=AFP}{\textit{AFP}} (alpha fetoprotein)}}
+\DeclareAcronym{APOB}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=APOB}{\textit{APOB}},long={apolipoprotein B},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=APOB}{\textit{APOB}} (apolipoprotein B)}}
 
 %%% Local Variables:
 %%% mode: latex
